<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UpdateProfile">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/landingblue">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:background="@color/landingblue"
            android:layout_weight=".3"
            android:gravity="bottom">
            <TextView
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:fontFamily="cursive"/>

            <TextView
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_title"
                android:textColor="@color/white"
                app:fontFamily="cursive"
                android:textSize="@dimen/dp20"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/scrollView"
            android:layout_weight=".7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/dp30"
                android:layout_marginEnd="@dimen/dp30">

                <TextView
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_profile"
                    android:textColor="@color/landingblue" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/txtname1"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/enter_name"
                        android:singleLine="true"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:id="@+id/txtname"
                        />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/txtnumber1"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/enter_mobile"
                        android:id="@+id/txtnumber"
                        android:singleLine="true"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/txtmail1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:id="@+id/txtmail"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:hint="@string/enter_email"
                        />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/txtaddress1"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/enter_address"
                        android:id="@+id/txtaddress"
                        android:maxLines="2"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_profile"
                    android:textColor="@color/white"
                    android:id="@+id/updatebtn"
                    android:layout_marginTop="20dp"
                    android:background="@color/landingblue"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/change_password"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/changepwd"
                    android:layout_marginTop="@dimen/dp20"
                    android:gravity="center"
                    android:textColor="@color/landingblue"
                    android:textAllCaps="false"
                    />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>