<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.Dashboard"
    tools:showIn="@layout/app_bar_dashboard2">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_transaction_found"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:id="@+id/notransaction"
        android:visibility="invisible"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/transactiondetaillayout"
        android:weightSum="2"
        android:background="@color/lightblue">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/TotattransValue"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/dp20"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_transaction"
                android:textColor="@color/white"
                android:id="@+id/Totattrans" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="45dp"
            android:background="@color/landingblue"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TotalamtValue"
                android:textColor="@color/white"
                android:textSize="@dimen/dp20"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Totalamt"
                android:textColor="@color/white"
                android:text="@string/total_amount"
                android:layout_marginLeft="2dp"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_below="@+id/transactiondetaillayout"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>